--- a/package.json
+++ b/package.json
@@ -7,12 +7,12 @@
     "bs58": "^6.0.0",
     "ed25519-hd-key": "^1.3.0",
     "ethers": "^6.13.2",
-    "tweetnacl": "^1.0.3"
+    "tweetnacl": "^1.0.3",
+    "vite-plugin-node-polyfills": "^0.22.0"
   },
   "name": "web3",
   "version": "1.0.0",
   "main": "index.js",
-  
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
