--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "bs58": "^6.0.0",
     "ed25519-hd-key": "^1.3.0",
     "ethers": "^6.13.4",
-    "tweetnacl": "^1.0.3",
-    "vite-plugin-node-polyfills": "^0.22.0"
+    "tweetnacl": "^1.0.3"
   },
   "name": "web3",
   "version": "1.0.0",
@@ -19,5 +18,8 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": ""
+  "description": "",
+  "devDependencies": {
+    "vite-plugin-node-polyfills": "^0.22.0"
+  }
 }
