--- a/week8.1_SolanaWalletAdapter/package.json
+++ b/week8.1_SolanaWalletAdapter/package.json
@@ -10,16 +10,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@noble/curves": "^1.8.1",
     "@solana/wallet-adapter-base": "^0.9.23",
     "@solana/wallet-adapter-react": "^0.15.35",
     "@solana/wallet-adapter-react-ui": "^0.9.35",
     "@solana/wallet-adapter-wallets": "^0.19.32",
     "@solana/web3.js": "^1.98.0",
     "@tailwindcss/vite": "^4.0.0",
+    "bs58": "^6.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "tailwindcss": "^4.0.0",
-    "undefined": "^0.1.0",
     "vite-plugin-node-polyfills": "^0.23.0"
   },
   "devDependencies": {
