--- a/week11_TanStackQueryEthWalletAdapter/package.json
+++ b/week11_TanStackQueryEthWalletAdapter/package.json
@@ -10,9 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.71.5",
     "axios": "^1.8.4",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "viem": "^2.25.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
